@@ -1,6 +1,9 @@
 v3.7.5 (XXXX-XX-XX)
 -------------------
 
+* Fix internal issue #777: Fixed memory access while substituting stored values
+  for ArangoSearch view optimization.
+
 * Added new metric `arangodb_network_forwarded_requests` to track the number
   of requests forwarded from one coordinator to another in a load-balancing
   context.
